# OOP-2019

./: README.md  cw1zad1CMakeLists.txt  cw1zad1main.cpp
02_tdd/include/: TextWrapper.h
02_tdd/src/: TextWrapper.cpp  main.cpp
05_stl_benchmark/bench/: CMakeLists.txt
05_stl_benchmark/bench/src/: DummyBench.cpp  LargeBench.cpp  MediumBench.cpp  ReleaseLargeDequeBench.cpp  ReleaseLargeMapBench.cpp  ReleaseLargeUnorderedMultisetBench.cpp  ReleaseMediumDequeBench.cpp  ReleaseMediumMapBench.cpp  ReleaseMediumUnorderedMultisetBench.cpp  SmallBench.cpp  SmallBenchDequeRelease.cpp  SmallBenchMap.cpp  SmallBenchMapRelease.cpp  SmallBenchUnorderedMultiset.cpp  SmallBenchUnorderedMultisetRelease.cpp  SmallDeque.cpp
05_stl_benchmark/include/: Large.h  Medium.h  Small.h
05_stl_benchmark/output/: ReleaseBenchmarkSmall  ReleaseLargeDequeBench  ReleaseMediumDequeBenchmark  ReleaseMediumMapBenchUnorderedMultiset  ReleaseMediumMapBenchmark  SmallBenchDequeResult  SmallBenchMapResult  SmallBenchUnorderedMultisetResult
06_observer_pattern/: CMakeLists.txt
06_observer_pattern/include/: Acceleration.h  Observer.h  Speed.h
06_observer_pattern/uml/: diagram.puml
07_abstract_factory_pattern/: CMakeLists.txt
07_abstract_factory_pattern/include/: ButtonGnomeWidget.h  ButtonKdeWidget.h  CheckBoxGnomeWidget.h  CheckBoxKdeWidget.h  Demo.h  GnomeWidgetFactory.h  KdeWidgetFactory.h  ListGnomeWidget.h  ListKdeWidget.h  Widget.h  WidgetFactory.h
07_abstract_factory_pattern/src/: ButtonGnomeWidget.cpp  ButtonKdeWidget.cpp  CheckBoxGnomeWidget.cpp  CheckBoxKdeWidget.cpp  Demo.cpp  GnomeWidgetFactory.cpp  KdeWidgetFactory.cpp  ListGnomeWidget.cpp  ListKdeWidget.cpp  Widget.cpp  WidgetFactory.cpp  main.cpp
08_fake_mock_or_stub/: CMakeLists.txt
08_fake_mock_or_stub/include/: Observer.h  ObserverImpl.h  ObserverInterface.h  Space.h  SpaceImpl.h  SpaceInterface.h  Time.h  TimeImpl.h  TimeInterface.h  Universe.h  UniverseImpl.h
08_fake_mock_or_stub/src/: UniverseImpl.cpp  main.cpp
08_fake_mock_or_stub/test/: CMakeLists.txt
08_fake_mock_or_stub/test/include/: ObserverMock.h  SpaceMock.h  TimeMock.h
08_fake_mock_or_stub/test/src/: UniverseTest.cpp
09_console/build-console-Desktop-Debug/: Makefile  console  moc_acceleration.cpp  moc_displacement.cpp  moc_speed.cpp
09_console/console/: acceleration.cpp  acceleration.h  console.pro  displacement.cpp  displacement.h  main.cpp  speed.cpp  speed.h
09_simple_gui/build-simple_gui-Desktop-Debug/: Makefile  moc_acceleration.cpp  moc_displacement.cpp  moc_mainwindow.cpp  moc_speed.cpp  simple_gui  ui_mainwindow.h
09_simple_gui/simple_gui/: acceleration.cpp  acceleration.h  displacement.cpp  mainwindow.cpp  mainwindow.h  speed.cpp  (+3 more)
10_state_machine/: mainwindow.cpp  mainwindow.h
13_tcp/: 13_tcp.pro
14_git/: .gitignore  01_merge.sh  02_rebase.sh  03_push.sh  04_internals.sh  05_revert.sh  06_rewrite.sh  07_origins.sh  08_submodules.sh
build-10_state_machine-Desktop-Debug/: 10_state_machine  Makefile
cwiczenia1Zad2/: CMakeLists.txt  Dummy.cpp  Dummy.h  main.cpp  test.cpp
cwiczeniaQML/: acceleration.cpp  acceleration.h  demo.cpp  demo.h  displacement.cpp  displacement.h  main.cpp  main.qml  speed.cpp  speed.h
simple_gui/: acceleration.cpp  displacement.cpp  displacement.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  simple_gui.pro  speed.cpp
(+36 files in other folders)
